@@ -5,6 +5,9 @@ Revision history for Perl extension HTTP-Body-Builder
     - Only the first key/value pair passed to ->add_content ended up in the
       body with the UrlEncoded module. Fixed by Dave Rolsky.
 
+    - Allow the constructors to accept content (and files, for MultiPart)
+      parameters. Implemented by Dave Rolsky.
+
 0.03 2013-10-08T23:32:29Z
 
     - use binmode to keep CRLF correctly
